<resources>
    <string name="app_name">Practical Test 02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="putKey">KEY</string>
    <string name="putValue">VALUE</string>
    <string name="getKey">KEY</string>
    <string name="putButton">PUT</string>
    <string name="getButton">GET</string>
    <string name="information_type">Information Type</string>
    <string name="get_weather_forecast">Get Weather Forecast</string>
</resources>
